# github-project-manager

./: .gitignore  LLM_PROJECT.md  README.md  TODO.md  pyproject.toml
docs/: USAGE.md
src/github_project_manager/: __init__.py  cli.py
src/github_project_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py
